# GirderEEGViewer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: test_and_release.yml
girdereegviewer/: __main__.py  core.py
girdereegviewer/app/: __main__.py  core.py
girdereegviewer/app/eeg/: components.py
girdereegviewer/eeg/: __init__.py  eeg_viewer_logic.py  eeg_viewer_ui.py  eeg_viewer_window.py
girdereegviewer/eeg_viewer/: eeg_viewer_logic.py  eeg_viewer_shortcuts_panel.py  eeg_viewer_ui.py
girdereegviewer/file_browser/: __init__.py  file_browser_logic.py  file_browser_ui.py
girdereegviewer/slicer_viewer/: __init__.py  slicer_viewer_logic.py  slicer_viewer_ui.py
tests/: test_import.py
workflows/: test_and_release.yml
