[project]
name = "girdereegviewer"
version = "1.0.0"
description = "Browser and Viewer of Girder database"
authors = [
    {name = "Kitware Europe"},
]
dependencies = [
    "eegvizlib",
    "girder-client",
    "py-undo-stack",
    "slicer-core>=5.11.0",
    "slicer-layer-dm>=1.2.0",
    "trame-gwc",
    "trame-rca>=2.1",
    "trame-server",
    "trame-slicer>=1.11.0",
    "trame-vuetify",
    "trame>=3.8.0"
]
requires-python = ">=3.10, <3.13"
readme = "README.rst"
license = {text = "Apache Software License"}
keywords = ["Python", "Interactive", "Web", "Application", "Framework"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]
turbo = [
    "PyTurboJPEG", # Requires libjpeg-turbo to be available on the system
]

[project.scripts]
girdereegviewer = "girdereegviewer:main"

[build-system]
requires = ['setuptools', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
girdereegviewer = [
    "**/*.js",
    "**/*.css",
]
[tool.semantic_release]
version_variables = [
    "girdereegviewer/__init__.py:__version__",
]
version_toml = [
    "pyproject.toml:project.version",
]
build_command = """
  python -m venv .venv
  source .venv/bin/activate
  pip install -U pip build
  python -m build .
"""

[tool.ruff]
line-length = 88

[tool.ruff.lint]
extend-select = [
    "ANN", # flake8-type-hint
    "ARG", # flake8-unused-arguments
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "EM", # flake8-errmsg
    "EXE", # flake8-executable
    "G", # flake8-logging-format
    "I", # isort
    "ICN", # flake8-import-conventions
    "NPY", # NumPy specific rules
    "PD", # pandas-vet
    "PGH", # pygrep-hooks
    "PIE", # flake8-pie
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PTH", # flake8-use-pathlib
    "RET", # flake8-return
    "RUF", # Ruff-specific
    "SIM", # flake8-simplify
    "T20", # flake8-print
    "UP", # pyupgrade
    "YTT", # flake8-2020
]
ignore = [
    "EM101",
    "EM102",
    "PLR09", # Too many <...>
    "PLR2004", # Magic value used in comparison
    "ISC001", # Conflicts with formatter
    "ANN401", # Any
    "ANN002", # *args
    "ANN003", # **kwargs
    "ANN204", # __init__ return type
]
isort.required-imports = []

[tool.ruff.lint.per-file-ignores]
"**/tests/*.py" = ["ARG001"]

[tool.ruff.lint.pycodestyle]
max-line-length = 120
